# DataParser

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
Dp/: Json.cpp  Json.hpp  StringUtils.cpp  StringUtils.hpp  Xml.cpp  Xml.hpp
Dp/Dt/: Data.cpp  Data.hpp  Node.cpp  Node.hpp
Dp/Parser/: Json.cpp  Json.hpp  Parser.cpp  Parser.hpp  Xml.cpp  Xml.hpp
doc/: Doxyfile
include/: json.hpp  mew.hpp  parser.hpp  sppt.hpp  srpt.hpp  xml.hpp
include/XML/: File.hpp  Markup.hpp  Object.hpp
include/dp/: json.hpp  srpt.hpp  xml.hpp
include/dp/dt/: data.hpp  node.hpp
include/dp/parser/: json.hpp  parser.hpp  srpt.hpp  xml.hpp
include/dt/: data.hpp  node.hpp  root.hpp
include/parser/: json.hpp  parser.hpp  srpt.hpp  xml.hpp
src/: json.cpp  mew.cpp  parser.cpp  sppt.cpp  srpt.cpp  xml.cpp
src/XML/: File.cpp  InnerMarkup.cpp  Markup.cpp
src/dp/: json.cpp  srpt.cpp  xml.cpp
src/dp/dt/: data.cpp  node.cpp
src/dp/parser/: json.cpp  parser.cpp  srpt.cpp  xml.cpp
src/dt/: data.cpp  node.cpp  root.cpp
src/parser/: json.cpp  parser.cpp  srpt.cpp  xml.cpp
test/: BenchXml.cpp  BenchXml.hpp  TestJson.cpp  TestNode.cpp  TestNode.hpp  TestXml.cpp  UnitTest.cmake  main.cpp  test.h  test.xml
test/include/: BenchXml.hpp  TestJson.hpp  TestNode.hpp  TestSppt.hpp  TestSrpt.hpp  TestXml.hpp  test.h
test/src/: BenchXml.cpp  TestJson.cpp  TestNode.cpp  TestSppt.cpp  TestSrpt.cpp  TestXml.cpp  main.cpp  test.c
test/xml/: dp_small.xml  error4.xml  fat.xml  test.json  test.xml
